blockml/test/errors/04_model/e214/e214m.model
model: e214m
udfs:  
- unk
joins:
- from_view: e214_one
  as: a

